# Adaptive-LLM-Inference-Lab

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  latency_mode.yaml  memory_efficient_mode.yaml  throughput_mode.yaml
notebooks/: 01_latency_memory_tradeoff.ipynb  02_adaptive_policy_analysis.ipynb
results/: sample_results.csv  sample_results.json
scripts/: plot_results.py  run_benchmark.py  run_policy_eval.py
src/adaptive_inference/: __init__.py  benchmark.py  configs.py  metrics.py  policies.py  profiler.py  runners.py  visualization.py
tests/: test_metrics.py  test_policy.py
